package protobufexample;

option java_package="co.za.ravi.spark.protobuf";
option java_outer_classname="AddressBooks";

message Person {
    required string name=1;
    required int32 id=2;
    required string email = 3;

    enum PhoneType {
        HOME = 0;
        WORK = 1;
        MOBILE = 2;
    }

    message Phone {
        required string phoneNumber = 1 ;
        optional PhoneType type = 2 [ default = MOBILE];
    }

    repeated Phone phone = 4;
}

message AddressBook {
  repeated Person person = 1;
}